--- a/app/src/main/res/drawable/bgviewdraw.xml
+++ b/app/src/main/res/drawable/bgviewdraw.xml
@@ -2,8 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape android:shape="rectangle" android:innerRadius="2px">
-            <size android:height="200dp" />
-            <stroke android:color="#FFFF00" android:width="10dp"></stroke>
+            <size android:height="70dp" />
+            <stroke android:color="#FFFF00" android:width="10dp"/>
             <solid android:color="@android:color/white" />
             <corners
                 android:bottomRightRadius="7dp"
