--- a/app/src/main/res/drawable/roundcorner.xml
+++ b/app/src/main/res/drawable/roundcorner.xml
@@ -3,7 +3,7 @@
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
             <stroke android:color="#FFFF00" android:width="3dp"/>
-            <solid android:color="@android:color/white" />
+            <!--<solid android:color="@android:color/white" />-->
             <corners android:radius="7dp" />
         </shape>
     </item>
