--- a/app/src/main/res/drawable/bgviewdraw.xml
+++ b/app/src/main/res/drawable/bgviewdraw.xml
@@ -11,7 +11,7 @@
                 android:topRightRadius="7dp"/>
         </shape>
     </item>
-    <item android:top="-25px" android:right="114dp">
+    <item android:top="-9dp" android:right="114dp">
         <bitmap android:src="@drawable/arrow" android:gravity="right|top"/>
     </item>
 </layer-list>
