Added: Material design everything!

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -67,7 +67,8 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/setFont"
         android:layout_below="@+id/fontPrev"
-        android:text="Auto randomize colors on startup" />
+        android:text="Auto randomize colors on startup"
+        android:checked="false" />
 
     <Button
         android:id="@+id/btnDonate"
