--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,9 @@
 <resources>
-
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
+        <item name="colorPrimary">#FDD835</item>
+        <item name="colorPrimaryDark">#FFEB3B</item>
+        <item name="colorAccent">#FDD835</item>
+        <item name="android:textColor">#1C1C1C</item>
     </style>
-
 </resources>
