--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,9 +3,16 @@
     tools:context="com.manvir.SnapColors.MainActivity" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_version"
         android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="Version: Error"/>
+    <item
+        android:id="@+id/action_donate"
+        android:orderInCategory="101"
+        android:title="Donate"/>
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="102"
+        android:title="About"/>
 
 </menu>
