Added: Material design settings Added: New settings app Added: Groups, the ability to send snaps to a predefined group of people Added: Ability to add a texture to the caption text Added: Ability to add a gradient to caption text Added: Visual feedback when a option is tapped in the options panel Fixed: Donation message should not show if you've donated via google play. Otherwise it should show when ever you update SnapColors Fixed: SnapColors options panel in snapchat would have very small buttons

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,12 +7,20 @@
         android:orderInCategory="100"
         android:title="Version: Error"/>
     <item
-        android:id="@+id/action_donate"
+        android:id="@+id/action_twitter"
         android:orderInCategory="101"
+        android:title="Twitter"/>
+    <item
+        android:id="@+id/action_donate"
+        android:orderInCategory="102"
         android:title="Donate"/>
     <item
+        android:id="@+id/action_help"
+        android:orderInCategory="103"
+        android:title="Help"/>
+    <item
         android:id="@+id/action_about"
-        android:orderInCategory="102"
+        android:orderInCategory="104"
         android:title="About"/>
 
 </menu>
