--- a/app/src/main/res/layout/size_layout.xml
+++ b/app/src/main/res/layout/size_layout.xml
@@ -6,7 +6,7 @@
     android:paddingTop="10dp"
     android:paddingLeft="10dp"
     android:paddingBottom="10dp"
-    android:clickable="true">
+    android:clickable="true" >
     <SeekBar
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -15,6 +15,7 @@
     <Button
         android:layout_marginTop="40dp"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:id="@+id/done"
         android:layout_height="33dp"
         android:layout_width="wrap_content"
@@ -23,7 +24,9 @@
     <Button
         android:layout_marginTop="40dp"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignRight="@id/done"
+        android:layout_alignEnd="@id/done"
         android:id="@+id/cancel"
         android:layout_height="33dp"
         android:layout_width="wrap_content"
