--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,9 @@
 <resources>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light">
-        <item name="colorPrimary">#FDD835</item>
-        <item name="colorPrimaryDark">#FFEB3B</item>
-        <item name="colorAccent">#FDD835</item>
-        <item name="android:textColor">#1C1C1C</item>
+        <item name="colorPrimary">@color/colorprimary</item>
+        <item name="colorPrimaryDark">@color/colorprimarydark</item>
+        <item name="colorAccent">@color/colorprimary</item>
+        <item name="android:textColor">@color/textcolor</item>
     </style>
 </resources>
