--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="AppTheme" parent="Theme.AppCompat.Light">
-        <!--Action Bar color-->
-        <item name="colorPrimary">#FDD835</item>
-        <!--Status bar color-->
-        <item name="colorPrimaryDark">#fff7d235</item>
-        <item name="android:textColor">#1C1C1C</item>
+        <!--Actionbar color-->
+        <item name="colorPrimary">@color/colorprimary</item>
+        <!--Statusbar color-->
+        <item name="colorPrimaryDark">@color/colorprimarydark</item>
+        <item name="colorAccent">@color/colorprimary</item>
+        <item name="android:textColor">@color/textcolor</item>
     </style>
 </resources>
