Save received snaps and stories (2/2) Don't save stories causes to many problems

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -34,6 +34,13 @@
             android:title="Clear all imported fonts" />
     </PreferenceCategory>
 
+    <PreferenceCategory android:title="Save Snaps">
+        <CheckBoxPreference
+            android:key="shouldSaveSnaps"
+            android:summary="Enable disable the saving of received snaps"
+            android:title="Enable Save" />
+    </PreferenceCategory>
+
     <PreferenceCategory android:title="Updater">
         <CheckBoxPreference
             android:key="checkForVer"
