Use a file picker for importing fonts

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,4 +6,24 @@
         <item name="colorAccent">@color/colorprimary</item>
         <item name="android:textColor">@color/textcolor</item>
     </style>
+
+    <!-- You must inherit from Theme.AppCompat. Dark or light doesn't matter -->
+    <style name="FilePickerTheme" parent="Theme.AppCompat.DialogWhenLarge">
+        <!-- Set these to match your theme -->
+        <item name="colorPrimary">@color/colorprimary</item>
+        <item name="colorPrimaryDark">@color/colorprimarydark</item>
+        <item name="colorAccent">@color/colorprimary</item>
+
+        <!-- Need to set this also to style create folder dialog -->
+        <item name="alertDialogTheme">@style/FilePickerAlertDialogTheme</item>
+        <!-- These are important. Handled by toolbar -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="FilePickerAlertDialogTheme" parent="Theme.AppCompat.Dialog.Alert">
+        <item name="colorPrimary">@color/colorprimary</item>
+        <item name="colorPrimaryDark">@color/colorprimarydark</item>
+        <item name="colorAccent">@color/colorprimary</item>
+    </style>
 </resources>
