Settings to change save location for snaps

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -39,6 +39,10 @@
             android:key="shouldSaveSnaps"
             android:summary="Enable disable the saving of received snaps"
             android:title="Enable Save" />
+        <Preference
+            android:key="saveLocation"
+            android:summary=""
+            android:title="Save Location" />
     </PreferenceCategory>
 
     <PreferenceCategory android:title="Updater">
