Allow setting a fixed timer when viewing received snaps defaults to 10sec

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -23,6 +23,13 @@
             android:title="Rainbow Text" />
     </PreferenceCategory>
 
+    <PreferenceCategory android:title="Snaps">
+        <Preference
+            android:key="minTimerInt"
+            android:summary="Lock all snaps to be viewable for 10 seconds"
+            android:title="Minimum Timer" />
+    </PreferenceCategory>
+
     <PreferenceCategory android:title="Fonts">
         <Preference
             android:key="importFont"
