Added: UI updated Fixed: Blocking stories Update for latest version of SnapChat (9.16.2.0 Beta & 9.16.0.2 Stable)

--- a/app/src/main/res/drawable/bgviewdraw.xml
+++ b/app/src/main/res/drawable/bgviewdraw.xml
@@ -6,9 +6,9 @@
             android:innerRadius="2px"
             android:shape="rectangle">
             <stroke
-                android:width="5dp"
-                android:color="#FFFF00" />
-            <solid android:color="@android:color/white" />
+                android:width="2.5dp"
+                android:color="#FFFFFF" />
+            <solid android:color="#80000000" />
             <corners
                 android:bottomLeftRadius="7dp"
                 android:bottomRightRadius="7dp"
