--- a/app/src/main/res/drawable/roundcorner.xml
+++ b/app/src/main/res/drawable/roundcorner.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item  android:drawable="@drawable/roundcorner_touched" android:state_pressed="true"/>
-    <item android:drawable="@drawable/roundcorner_normal"/>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <stroke
+        android:width="2.5dp"
+        android:color="#FFFFFF" />
+    <!--<solid android:color="@android:color/white" />-->
+    <corners android:radius="7dp" />
+</shape>
